--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,9 +37,8 @@ lazy_static = ">=1.5.0"
 primitive-types = { version = ">=0.13.1", features = ["serde"] }
 serde = { version = ">=1.0.219", features = ["derive"] }
 serde_json = ">=1.0.140"
-serde_yaml = ">=0.9"
 tokio = { version = ">=1.44.1", features = ["full"] }
-tokio-postgres = { version = ">=0.7.13", features = ["with-chrono-0_4"] }
+clickhouse = { version = "0.12", features = ["time", "uuid"] }
 tracing = ">=0.1.41"
 hickory-resolver = { version = ">=0.25.0-alpha.5", package = "hickory-resolver" }
 time = { version = ">=0.3.39", package = "time" }
